--- a/calca1-3.html
+++ b/calca1-3.html
@@ -23,14 +23,14 @@
     <!-- Seção de imagens -->
     <div class="images-section">
         <div class="main-image">
-            <img id="mainImg" src="img/shortsJ.PNG" alt="Shorts Jeans Principal">
+            <img id="mainImg" src="img/shortsj.png" alt="Shorts Jeans Principal">
         </div>
         <div class="thumbnail-container">
             <div class="thumbnail">
-                <img src="img/shortsJ.PNG" alt="Shorts Jeans Miniatura Claro" onclick="changeImage('img/ShortsJ.PNG')">
+                <img src="img/shortsj.png" alt="Shorts Jeans Miniatura Claro" onclick="changeImage('img/shortsj.png')">
             </div>
             <div class="thumbnail">
-                <img src="img/shortsJE.jpeg" alt="Shorts Jeans Miniatura Escuro" onclick="changeImage('img/ShortsJE.jpeg')">
+                <img src="img/shortsje.jpeg" alt="Shorts Jeans Miniatura Escuro" onclick="changeImage('img/shortsje.jpeg')">
             </div>
         </div>
     </div>
@@ -56,8 +56,8 @@
         <div class="color-selection">
             <label for="color">Escolha a Cor:</label>
             <div class="colors">
-                <button onclick="changeImage('img/ShortsJ.PNG')">Claro</button>
-                <button onclick="changeImage('img/ShortsJE.jpeg')">Escuro</button>
+                <button onclick="changeImage('img/shortsj.png')">Claro</button>
+                <button onclick="changeImage('img/shortsje.jpeg')">Escuro</button>
             </div>
         </div>
 
